# text-dialogue-qwen3

./: .gitignore  AGENT.md  README.md  generate_random_travel_local_batch.py  normalize_dialogue_json.py  normalize_jmultiwoz_json_text.py  pyproject.toml  qwen_dialogue.py  repair_jmultiwoz_partial_json.py  rewrite_jmultiwoz_tsv_to_json_batch.py  validate_dialogue_json.py  validate_dialogue_tsv.py
examples/: input.tsv
jmultiwoz-tsv-by-dialogue/test/: 1015.tsv  1020.tsv  1038.tsv  1040.tsv  1044.tsv  1051.tsv  1067.tsv  1076.tsv  1079.tsv  1080.tsv  1085.tsv  1106.tsv  1114.tsv  1131.tsv  1161.tsv  1182.tsv  1183.tsv  1196.tsv  1197.tsv  1199.tsv  120.tsv  1213.tsv  1226.tsv  1237.tsv  1241.tsv  1270.tsv  1277.tsv  1284.tsv  1323.tsv  1333.tsv  1348.tsv  1356.tsv  1365.tsv  1382.tsv  1383.tsv  1400.tsv  1419.tsv  1433.tsv  1456.tsv  1462.tsv  (+260 more)
jmultiwoz-tsv-by-dialogue/train/: 10.tsv  100.tsv  1000.tsv  1001.tsv  1002.tsv  1003.tsv  1004.tsv  1005.tsv  1006.tsv  1007.tsv  1008.tsv  1009.tsv  101.tsv  1010.tsv  1011.tsv  1012.tsv  1013.tsv  1014.tsv  1016.tsv  1017.tsv  1018.tsv  1019.tsv  1021.tsv  1022.tsv  1025.tsv  1026.tsv  1027.tsv  1028.tsv  1029.tsv  103.tsv  1030.tsv  1031.tsv  1032.tsv  1033.tsv  1035.tsv  1036.tsv  104.tsv  (+3609 more)
prompts/: random_travel_dialogues_json.txt  rewrite_jmultiwoz_tsv_to_json_one_dialogue.txt  rewrite_kyowa.txt
scripts/: generate_random_travel_json.sh  generate_random_travel_json_500.sh  generate_random_travel_json_5000.sh  generate_random_travel_json_local.sh  rewrite_jmultiwoz_tsv_to_json.sh  serve_vllm.sh  setup_local.sh  setup_vllm.sh
(+781 files in other folders)
